  this might break compatibility with some existing configuration files.
  We accept this in favour of the gained security.
- removed a memory leak that could occur if timegenerated was used in
  RFC 3164 format in templates
- did some preparation in msg.c for advanced multithreading - placed the
  hooks, but not yet any active code
---------------------------------------------------------------------------
Version 1.17.1 (rgerhards), 2007-07-20
- fixed a bug that caused make install to install rsyslogd and rklogd under
  the wrong names
- fixed bug that caused $AllowedSenders to handle IPv6 scopes incorrectly;
  also fixed but that could grabble $AllowedSender wildcards. Thanks to
  mildew@gmail.com for the patch
- minor code cleanup - thanks to Peter Vrabec for the patch
- fixed minimal memory leak on HUP (caused by templates)
  thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- fixed another memory leak on HUPing and on exiting rsyslogd
  again thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- code cleanup (removed compiler warnings)
- fixed portability bug in configure.ac - thanks to Bartosz Kuźma for patch
- moved msg object into its own file set
- added the capability to continue trying to write log files when the
  file system is full. Functionality based on patch by Martin Schulze
  to sysklogd package.
---------------------------------------------------------------------------
Version 1.17.0 (RGer), 2007-07-17
- added $RepeatedLineReduction config parameter
- added $EscapeControlCharactersOnReceive config parameter
- added $ControlCharacterEscapePrefix config parameter
- added $DirCreateMode config parameter
- added $CreateDirs config parameter
- added $DebugPrintTemplateList config parameter
- added $ResetConfigVariables config parameter
- added $FileOwner config parameter
- added $FileGroup config parameter
- added $DirOwner config parameter
- added $DirGroup config parameter
- added $FailOnChownFailure config parameter