@@ -24,6 +24,8 @@
 #ifndef	MSG_H_INCLUDED
 #define	MSG_H_INCLUDED 1
 
+#include "template.h"
+
 /* rgerhards 2004-11-08: The following structure represents a
  * syslog message. 
  *
