@@ -35,6 +35,8 @@ void getCurrTime(struct syslogTime *t);
 int formatTimestampToMySQL(struct syslogTime *ts, char* pDst, size_t iLenDst);
 int formatTimestamp3339(struct syslogTime *ts, char* pBuf, size_t iLenBuf);
 int formatTimestamp3164(struct syslogTime *ts, char* pBuf, size_t iLenBuf);
+void  iovCreate(selector_t *f);
+char *iovAsString(selector_t *f);
 
 extern int glblHadMemShortage; /* indicates if we had memory shortage some time during the run */
 extern syslogCODE rs_prioritynames[];
